--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required (VERSION 1.0)
 project (seb-ledger)
-add_executable(seb-ledger main.cpp LedgerFile.cpp Posting.cpp Transaction.cpp)
+set(CMAKE_CXX_FLAGS "-std=c++14")
+add_executable(seb-ledger main.cpp LedgerFile.cpp Posting.cpp Transaction.cpp Account.cpp)
 
