Posting: add code that computes a posting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 1.0)
 project (seb-ledger)
-set(CMAKE_CXX_FLAGS "-std=c++14")
+set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -O3 -g")
 add_executable(seb-ledger main.cpp LedgerFile.cpp Posting.cpp Transaction.cpp Account.cpp)
 
